Labs/Interface level 1 & 2/7.ADC/Reaf/ADC_Eclipse_Exercises/.metadata/.plugins/org.eclipse.cdt.ui/ts.build.log
13:26:04 **** Incremental Build of configuration Debug for project ts ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ts.o" "..\\src\\ts.c" 
..\src\ts.c: In function 'main':
..\src\ts.c:18:8: error: assignment of read-only location '*x'
   x[0] = 's';
        ^

13:26:04 Build Finished (took 155ms)

